# krb525

./: .gitignore  BUILDING  ChangeLog  Makefile.am  README  README.md  acconfig.h  auth_con.c  auth_con.h  autogen.sh  base64.c  capability.c  capability.h  client.c  config.h.in~  config.hin  configure.in  configure.scan  h_db.c  h_db.h  k5_db.c  k5_db.h  krb525.1  krb525.conf  krb525.conf.5  krb525.h  krb525_convert.c  krb525_convert.h  krb525d.8  netio.c  netio.h  new.changes  parse_conf.c  parse_conf.h  renew.c  server.c  server.h  srv_conf.c  srv_conf.h
CVS/: Entries  Repository
cf/: mips-abi.m4
cf/CVS/: Entries  Repository
debian/: .#changelog.1.3  changelog  control  copyright  rules  source.lintian-overrides
debian/CVS/: Entries  Repository  Root
